// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Setup CLI > should add LSP plugin alongside existing plugins > change summary 1`] = `
[
  {
    "description": "Add @effect/tsgo@^0.0.5 to devDependencies",
    "file": "package.json",
  },
  {
    "description": "Add $schema to tsconfig; Add @effect/language-service plugin to existing plugins array",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should add LSP plugin alongside existing plugins > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
]
`;

exports[`Setup CLI > should add LSP plugin alongside existing plugins > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
"devDependencies": { "@effect/tsgo": "^0.0.5","typescript": "7.1.0-dev.test" }
}"
`;

exports[`Setup CLI > should add LSP plugin alongside existing plugins > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
    "plugins": [
      {
        "name": "typescript-plugin-css-modules"
      },
{
	"name": "@effect/language-service"
}
    ]
  },
"$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json"
}"
`;

exports[`Setup CLI > should add LSP with VS Code editor selected and create new settings file > .vscode/settings.json 1`] = `
"{
  "typescript.native-preview.tsdk": "node_modules/typescript",
  "typescript.experimental.useTsgo": true,
  "js/ts.experimental.useTsgo": true
}
"
`;

exports[`Setup CLI > should add LSP with VS Code editor selected and create new settings file > change summary 1`] = `
[
  {
    "description": "Add @effect/tsgo@^0.0.5 to devDependencies",
    "file": "package.json",
  },
  {
    "description": "Add $schema to tsconfig; Add plugins array with @effect/language-service plugin",
    "file": "tsconfig.json",
  },
  {
    "description": "Create .vscode/settings.json",
    "file": ".vscode/settings.json",
  },
]
`;

exports[`Setup CLI > should add LSP with VS Code editor selected and create new settings file > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
  "",
  "VS Code / Cursor / VS Code-based editors:",
  "  1. Install the TypeScript 7 extension",
  "  2. Open a TypeScript file and ensure the native TS server is active",
  "  3. The language service plugin will be loaded automatically",
  "",
]
`;

exports[`Setup CLI > should add LSP with VS Code editor selected and create new settings file > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
"devDependencies": { "@effect/tsgo": "^0.0.5","typescript": "7.1.0-dev.test" }
}"
`;

exports[`Setup CLI > should add LSP with VS Code editor selected and create new settings file > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
"plugins": [
	{
		"name": "@effect/language-service"
	}
]
  },
"$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json"
}"
`;

exports[`Setup CLI > should add LSP with custom diagnostic severities when no plugin exists > change summary 1`] = `
[
  {
    "description": "Add @effect/tsgo@^0.0.5 to devDependencies",
    "file": "package.json",
  },
  {
    "description": "Add $schema to tsconfig; Add plugins array with @effect/language-service plugin",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should add LSP with custom diagnostic severities when no plugin exists > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
]
`;

exports[`Setup CLI > should add LSP with custom diagnostic severities when no plugin exists > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
"devDependencies": { "@effect/tsgo": "^0.0.5","typescript": "7.1.0-dev.test" }
}"
`;

exports[`Setup CLI > should add LSP with custom diagnostic severities when no plugin exists > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
"plugins": [
	{
		"name": "@effect/language-service",
		"diagnosticSeverity": {
			"floatingEffect": "warning",
			"missingEffectError": "off"
		}
	}
]
  },
"$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json"
}"
`;

exports[`Setup CLI > should add custom diagnostic severities when plugin exists without custom values > change summary 1`] = `
[
  {
    "description": "Add typescript@7.1.0-dev.test to devDependencies",
    "file": "package.json",
  },
  {
    "description": "Add $schema to tsconfig; Add diagnosticSeverity to @effect/language-service plugin",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should add custom diagnostic severities when plugin exists without custom values > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
]
`;

exports[`Setup CLI > should add custom diagnostic severities when plugin exists without custom values > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
  "devDependencies": {
    "@effect/tsgo": "^0.0.5",
"typescript": "7.1.0-dev.test"
  }
}"
`;

exports[`Setup CLI > should add custom diagnostic severities when plugin exists without custom values > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
    "plugins": [
      {
        "name": "@effect/language-service",
"diagnosticSeverity": {
	"floatingEffect": "warning",
	"missingEffectContext": "message"
}
      }
    ]
  },
"$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json"
}"
`;

exports[`Setup CLI > should generate changes for Astro-style configs using the legacy prepare command > change summary 1`] = `
[
  {
    "description": "Add @effect/tsgo@^0.0.5 to devDependencies; Add typescript@7.1.0-dev.test to devDependencies; Update prepare script to include patch command",
    "file": "package.json",
  },
  {
    "description": "Add $schema to tsconfig",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should generate changes for Astro-style configs using the legacy prepare command > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
]
`;

exports[`Setup CLI > should generate changes for Astro-style configs using the legacy prepare command > package.json 1`] = `
"{
  "scripts": {
    "prepare": "effect-language-service patch && effect-tsgo patch",
    "dev": "astro dev"
  },
  "dependencies": {},
  "devDependencies": {
    "@effect/language-service": "^0.80.0",
    "typescript": "7.1.0-dev.test",
"@effect/tsgo": "^0.0.5"
  }
}"
`;

exports[`Setup CLI > should generate changes for Astro-style configs using the legacy prepare command > tsconfig.json 1`] = `
"{
  "extends": "astro/tsconfigs/strictest",
  "include": [
    ".astro/types.d.ts",
    "**/*"
  ],
  "exclude": [
    "dist"
  ],
  "compilerOptions": {
    "paths": {
      "@/*": [
        "./src/*"
      ]
    },
    "jsx": "react-jsx",
    "jsxImportSource": "react",
    "skipLibCheck": true,
    "plugins": [
      {
        "name": "@effect/language-service",
        "namespaceImportPackages": [
          "effect",
          "@effect/*"
        ]
      }
    ]
  },
"$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json"
}"
`;

exports[`Setup CLI > should generate changes for adding LSP with defaults > change summary 1`] = `
[
  {
    "description": "Add @effect/tsgo@^0.0.5 to devDependencies",
    "file": "package.json",
  },
  {
    "description": "Add $schema to tsconfig; Add plugins array with @effect/language-service plugin",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should generate changes for adding LSP with defaults > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
]
`;

exports[`Setup CLI > should generate changes for adding LSP with defaults > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
"devDependencies": { "@effect/tsgo": "^0.0.5","typescript": "7.1.0-dev.test" }
}"
`;

exports[`Setup CLI > should generate changes for adding LSP with defaults > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
"plugins": [
	{
		"name": "@effect/language-service"
	}
]
  },
"$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json"
}"
`;

exports[`Setup CLI > should generate changes for adding LSP with prepare script > change summary 1`] = `
[
  {
    "description": "Add @effect/tsgo@^0.0.5 to devDependencies; Add scripts section with prepare script",
    "file": "package.json",
  },
  {
    "description": "Add $schema to tsconfig; Add plugins array with @effect/language-service plugin",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should generate changes for adding LSP with prepare script > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
]
`;

exports[`Setup CLI > should generate changes for adding LSP with prepare script > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
"scripts": { "prepare": "effect-tsgo patch" },
"devDependencies": { "@effect/tsgo": "^0.0.5","typescript": "7.1.0-dev.test" }
}"
`;

exports[`Setup CLI > should generate changes for adding LSP with prepare script > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
"plugins": [
	{
		"name": "@effect/language-service"
	}
]
  },
"$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json"
}"
`;

exports[`Setup CLI > should generate changes for removing LSP and prepare script > change summary 1`] = `
[
  {
    "description": "Remove @effect/tsgo from dependencies; Remove prepare script with patch command",
    "file": "package.json",
  },
  {
    "description": "Remove @effect/language-service plugin from tsconfig",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should generate changes for removing LSP and prepare script > messages 1`] = `
[
  "Run \`effect-tsgo unpatch\` to restore the original TypeScript-Go binary.",
]
`;

exports[`Setup CLI > should generate changes for removing LSP and prepare script > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "devDependencies": {
    "typescript": "^5.0.0"
  },
  "scripts": {
  }
}"
`;

exports[`Setup CLI > should generate changes for removing LSP and prepare script > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
    "plugins": [
    ]
  }
}"
`;

exports[`Setup CLI > should generate changes for removing LSP when already installed > change summary 1`] = `
[
  {
    "description": "Remove @effect/tsgo from dependencies",
    "file": "package.json",
  },
  {
    "description": "Remove $schema from tsconfig; Remove @effect/language-service plugin from tsconfig",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should generate changes for removing LSP when already installed > messages 1`] = `
[
  "Run \`effect-tsgo unpatch\` to restore the original TypeScript-Go binary.",
]
`;

exports[`Setup CLI > should generate changes for removing LSP when already installed > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
  "devDependencies": {
    "typescript": "^5.0.0"
  }
}"
`;

exports[`Setup CLI > should generate changes for removing LSP when already installed > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
    "plugins": [
    ]
  }
}"
`;

exports[`Setup CLI > should not override existing plugins when adding LSP plugin > change summary 1`] = `
[
  {
    "description": "Add @effect/tsgo@^0.0.5 to devDependencies",
    "file": "package.json",
  },
  {
    "description": "Add $schema to tsconfig; Add @effect/language-service plugin to existing plugins array",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should not override existing plugins when adding LSP plugin > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
]
`;

exports[`Setup CLI > should not override existing plugins when adding LSP plugin > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
"devDependencies": { "@effect/tsgo": "^0.0.5","typescript": "7.1.0-dev.test" }
}"
`;

exports[`Setup CLI > should not override existing plugins when adding LSP plugin > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
    "plugins": [
      {
        "name": "typescript-plugin-css-modules",
        "options": {
          "classnameTransform": "camelCase"
        }
      },
      {
        "name": "another-typescript-plugin"
      },
{
	"name": "@effect/language-service"
}
    ]
  },
"$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json"
}"
`;

exports[`Setup CLI > should preserve all existing VS Code settings from a real repository config > .vscode/settings.json 1`] = `
"{
  "typescript.tsdk": "./packages/core/node_modules/typescript/lib",
  "typescript.preferences.importModuleSpecifier": "non-relative",
  "typescript.enablePromptUseWorkspaceTsdk": true,
  "editor.formatOnSave": true,
  "eslint.format.enable": true,
  "editor.acceptSuggestionOnCommitCharacter": true,
  "editor.acceptSuggestionOnEnter": "on",
  "editor.quickSuggestionsDelay": 10,
  "editor.suggestOnTriggerCharacters": true,
  "editor.tabCompletion": "off",
  "editor.suggest.localityBonus": true,
  "editor.suggestSelection": "recentlyUsed",
  "editor.wordBasedSuggestions": "matchingDocuments",
  "editor.parameterHints.enabled": true,
  "files.insertFinalNewline": true,
"js/ts.experimental.useTsgo": true,
"typescript.experimental.useTsgo": true,
"typescript.native-preview.tsdk": "node_modules/typescript"
}"
`;

exports[`Setup CLI > should preserve all existing VS Code settings from a real repository config > change summary 1`] = `
[
  {
    "description": "Add @effect/tsgo@^0.0.5 to devDependencies",
    "file": "package.json",
  },
  {
    "description": "Add $schema to tsconfig; Add plugins array with @effect/language-service plugin",
    "file": "tsconfig.json",
  },
  {
    "description": "Add typescript.native-preview.tsdk setting; Add typescript.experimental.useTsgo setting; Add js/ts.experimental.useTsgo setting",
    "file": ".vscode/settings.json",
  },
]
`;

exports[`Setup CLI > should preserve all existing VS Code settings from a real repository config > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
  "",
  "VS Code / Cursor / VS Code-based editors:",
  "  1. Install the TypeScript 7 extension",
  "  2. Open a TypeScript file and ensure the native TS server is active",
  "  3. The language service plugin will be loaded automatically",
  "",
]
`;

exports[`Setup CLI > should preserve all existing VS Code settings from a real repository config > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
"devDependencies": { "@effect/tsgo": "^0.0.5","typescript": "7.1.0-dev.test" }
}"
`;

exports[`Setup CLI > should preserve all existing VS Code settings from a real repository config > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
"plugins": [
	{
		"name": "@effect/language-service"
	}
]
  },
"$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json"
}"
`;

exports[`Setup CLI > should preserve existing VS Code settings when adding LSP-specific settings > .vscode/settings.json 1`] = `
"{
  "editor.formatOnSave": true,
  "editor.tabSize": 2,
  "files.autoSave": "onFocusChange",
"js/ts.experimental.useTsgo": true,
"typescript.experimental.useTsgo": true,
"typescript.native-preview.tsdk": "node_modules/typescript"
}"
`;

exports[`Setup CLI > should preserve existing VS Code settings when adding LSP-specific settings > change summary 1`] = `
[
  {
    "description": "Add @effect/tsgo@^0.0.5 to devDependencies",
    "file": "package.json",
  },
  {
    "description": "Add $schema to tsconfig; Add plugins array with @effect/language-service plugin",
    "file": "tsconfig.json",
  },
  {
    "description": "Add typescript.native-preview.tsdk setting; Add typescript.experimental.useTsgo setting; Add js/ts.experimental.useTsgo setting",
    "file": ".vscode/settings.json",
  },
]
`;

exports[`Setup CLI > should preserve existing VS Code settings when adding LSP-specific settings > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
  "",
  "VS Code / Cursor / VS Code-based editors:",
  "  1. Install the TypeScript 7 extension",
  "  2. Open a TypeScript file and ensure the native TS server is active",
  "  3. The language service plugin will be loaded automatically",
  "",
]
`;

exports[`Setup CLI > should preserve existing VS Code settings when adding LSP-specific settings > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
"devDependencies": { "@effect/tsgo": "^0.0.5","typescript": "7.1.0-dev.test" }
}"
`;

exports[`Setup CLI > should preserve existing VS Code settings when adding LSP-specific settings > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
"plugins": [
	{
		"name": "@effect/language-service"
	}
]
  },
"$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json"
}"
`;

exports[`Setup CLI > should remove only LSP patch command from prepare script with multiple commands > change summary 1`] = `
[
  {
    "description": "Remove @effect/tsgo from dependencies; Remove effect-tsgo patch command from prepare script",
    "file": "package.json",
  },
  {
    "description": "Remove @effect/language-service plugin from tsconfig",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should remove only LSP patch command from prepare script with multiple commands > messages 1`] = `
[
  "WARNING: Your prepare script contained multiple commands. I attempted to automatically remove only the 'effect-tsgo patch' command. Please verify that the prepare script is correct after this change.",
  "Run \`effect-tsgo unpatch\` to restore the original TypeScript-Go binary.",
]
`;

exports[`Setup CLI > should remove only LSP patch command from prepare script with multiple commands > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "devDependencies": {
    "typescript": "^5.0.0"
  },
  "scripts": {
    "prepare": "husky install",
    "test": "vitest"
  }
}"
`;

exports[`Setup CLI > should remove only LSP patch command from prepare script with multiple commands > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
    "plugins": [
    ]
  }
}"
`;

exports[`Setup CLI > should remove only LSP plugin while preserving other plugins > change summary 1`] = `
[
  {
    "description": "Remove @effect/tsgo from dependencies",
    "file": "package.json",
  },
  {
    "description": "Remove @effect/language-service plugin from tsconfig",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should remove only LSP plugin while preserving other plugins > messages 1`] = `
[
  "Run \`effect-tsgo unpatch\` to restore the original TypeScript-Go binary.",
]
`;

exports[`Setup CLI > should remove only LSP plugin while preserving other plugins > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
  "devDependencies": {
    "typescript": "^5.0.0"
  }
}"
`;

exports[`Setup CLI > should remove only LSP plugin while preserving other plugins > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
    "plugins": [
      {
        "name": "typescript-plugin-css-modules"
      }
    ]
  }
}"
`;

exports[`Setup CLI > should replace existing tsconfig schema when adding LSP > change summary 1`] = `
[
  {
    "description": "Add @effect/tsgo@^0.0.5 to devDependencies",
    "file": "package.json",
  },
  {
    "description": "Update $schema in tsconfig; Add plugins array with @effect/language-service plugin",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should replace existing tsconfig schema when adding LSP > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
]
`;

exports[`Setup CLI > should replace existing tsconfig schema when adding LSP > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
"devDependencies": { "@effect/tsgo": "^0.0.5","typescript": "7.1.0-dev.test" }
}"
`;

exports[`Setup CLI > should replace existing tsconfig schema when adding LSP > tsconfig.json 1`] = `
"{
  "$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json",
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
"plugins": [
	{
		"name": "@effect/language-service"
	}
]
  }
}"
`;

exports[`Setup CLI > should update LSP version when already installed with older version > change summary 1`] = `
[
  {
    "description": "Update @effect/tsgo from ^0.0.1 to ^0.0.5; Add typescript@7.1.0-dev.test to devDependencies",
    "file": "package.json",
  },
  {
    "description": "Add $schema to tsconfig",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should update LSP version when already installed with older version > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
]
`;

exports[`Setup CLI > should update LSP version when already installed with older version > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
  "devDependencies": {
    "@effect/tsgo": "^0.0.5",
    "typescript": "7.1.0-dev.test"
  }
}"
`;

exports[`Setup CLI > should update LSP version when already installed with older version > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
    "plugins": [
      {
        "name": "@effect/language-service"
      }
    ]
  },
"$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json"
}"
`;

exports[`Setup CLI > should update custom diagnostic severities when plugin already has custom values > change summary 1`] = `
[
  {
    "description": "Add typescript@7.1.0-dev.test to devDependencies",
    "file": "package.json",
  },
  {
    "description": "Add $schema to tsconfig; Update diagnosticSeverity in @effect/language-service plugin",
    "file": "tsconfig.json",
  },
]
`;

exports[`Setup CLI > should update custom diagnostic severities when plugin already has custom values > messages 1`] = `
[
  "Run \`effect-tsgo patch\` to complete the installation.",
]
`;

exports[`Setup CLI > should update custom diagnostic severities when plugin already has custom values > package.json 1`] = `
"{
  "name": "test-project",
  "version": "1.0.0",
  "dependencies": {},
  "devDependencies": {
    "@effect/tsgo": "^0.0.5",
"typescript": "7.1.0-dev.test"
  }
}"
`;

exports[`Setup CLI > should update custom diagnostic severities when plugin already has custom values > tsconfig.json 1`] = `
"{
  "compilerOptions": {
    "strict": true,
    "target": "ES2022",
    "plugins": [
      {
        "name": "@effect/language-service",
        "diagnosticSeverity": {
					"floatingEffect": "warning",
					"missingEffectError": "off",
					"missingLayerContext": "error"
				}
      }
    ]
  },
"$schema": "https://raw.githubusercontent.com/Effect-TS/tsgo/refs/heads/main/schema.json"
}"
`;
